# jjdag

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  reset_test_env.sh
src/: command_tree.rs  log_tree.rs  logger.rs  main.rs  model.rs  shell_out.rs  update.rs  view.rs
